--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,4 +8,8 @@ dependencies = [
     "flet[all]==0.27.6",
     "flet-desktop>=0.27.6",
     "pandas>=2.2.3",
+    "torch>=2.6.0",
+    "torchvision>=0.21.0",
+    "torchaudio>=2.6.0",
+    "polars>=1.25.2",
 ]
